chore: fixed broken css url

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2185,7 +2185,7 @@
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../img/intro-bg.png");
+				background-image: url("../images/intro-bg.png");
 				position: relative;
 				z-index: 1;
 				height: 100vh;
